# numba-cfunc-compiler

./: .copier-answers.yaml  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  conda.yml  wiki-lint.yml  wiki-publish.yml
conda/: dev-environment-unix.yml
docs/wiki/: Installation.md  _Footer.md  _Sidebar.md
docs/wiki/contribute/: Build-from-Source.md  Contribute.md  Local-Development-Setup.md
numba_cfunc_compiler/: ast_handlers.py  compilation_context.py  function_analyzer.py  method_factory.py  models.py  numba_ast_converter.py  numba_config.py  numba_core.py  numba_type_inference.py  output_utils.py  post_compilation.py  source_registry.py  state_ast.py  type_factory.py  variable_factory.py
numba_cfunc_compiler/defaults/: __init__.py  datetime_support.py  dict_support.py  list_support.py  primitive_support.py  source_categories.py  struct_support.py  timedelta_support.py
numba_cfunc_compiler/numba_rt/: __init__.py  nrt_init_py.cpp
numba_cfunc_compiler/numba_rt/cext/: cext.h  dictobject.c  dictobject.h  listobject.c  listobject.h
numba_cfunc_compiler/standalone/: __init__.py  dict.py  list.py  utils.py
numba_cfunc_compiler/tests/: cfunc_caller.c  harness.py  test_compilation.py  test_helper_modules.py  test_support_units.py
numba_cfunc_compiler/utils/: __init__.py  ast.py  ffi.py  struct.py  types.py
